# reality-route-helper

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  rrh.py
.github/workflows/: release.yml
docs/: ARCHITECTURE.zh-CN.md  DISTRIBUTION.zh-CN.md  ROADMAP.zh-CN.md  ROUTES.zh-CN.md  TESTING.zh-CN.md
examples/: server-config.example.json  v2rayn-link.example.txt
reality_route_helper/: cli.py  i18n.py
reality_route_helper/core/: context.py  models.py  runner.py  validators.py
reality_route_helper/routes/: catalog.py  vless_reality.py
reality_route_helper/scanners/: outline.py  service_scanner.py
reality_route_helper/templates/: xray_config.py
scripts/: build-release.ps1  build-release.sh  run.ps1  run.sh  test-linux-sandbox.sh  test-local.ps1
tests/: menu_flow_test.py  smoke_test.py
